--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,17 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-all</artifactId>
+          <version>4.1.42.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jboss.netty</groupId>
+          <artifactId>netty</artifactId>
+          <version>3.2.3.Final</version>
+      </dependency>
+
   </dependencies>
 
   <build>
