--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-.idea/*
-*target*
+.DS_Store
+.pampas/
+
+**/.idea/*
+**/target/*
+
+.idea
 *.iml
+*.class
+
+.project
+**/.settings/*
+
+**/*/dependency-reduced-pom.xml
+
+
+
+.classpath
+.factorypath
+.vscode/
